--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.19-pre3
-yarn_mappings=1.19-pre3+build.6
+minecraft_version=1.19
+yarn_mappings=1.19+build.1
 loader_version=0.14.6
 
 # Mod Properties
-mod_version = 1.0.0
+mod_version = 1.0.1
 maven_group = net.keys
 archives_base_name = sleepers
 
 # Dependencies
-fabric_version=0.55.0+1.19
+fabric_version=0.55.2+1.19
